--- a/cmd/bb_event_service/BUILD.bazel
+++ b/cmd/bb_event_service/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-event-service/cmd/bb_event_service",
     visibility = ["//visibility:private"],
     deps = [
-        "//pkg/configuration:go_default_library",
+        "//pkg/proto/configuration/bb_event_service:go_default_library",
         "@com_github_bazelbuild_bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_buildbarn_bb_storage//pkg/blobstore:go_default_library",
