--- a/cmd/bb_event_service/BUILD.bazel
+++ b/cmd/bb_event_service/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
@@ -38,10 +38,10 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-container_image(
+go_image(
     name = "bb_event_service_container",
-    entrypoint = ["/bb_event_service"],
-    files = [":bb_event_service"],
+    embed = [":go_default_library"],
+    pure = "on",
     visibility = ["//visibility:public"],
 )
 
